--- a/themes/greatermedia/assets/css/sass/components/_entries.scss
+++ b/themes/greatermedia/assets/css/sass/components/_entries.scss
@@ -85,7 +85,7 @@
 	
 	.entry2__excerpt {
 		// Hide by default
-		margin: $base-line-height 0 0;
+		margin: .75em 0 0;
 		display: none; 
 		text-align: left;
 		
